--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,9 @@
 <html>
-  <head> <title> Domain Logger </title> </head>
-  <body style="background-color:ADD8E6">
-
+  <head>
+    <title>Domain Logger</title>
+  </head>
+  <body style="background-color: ADD8E6">
     <h1>Your websites and time spent on each!</h1>
-    <script type="text/javascript" src="popup.js"></script>
-
+    <script type="text/javascript" src="./src/index.js"></script>
   </body>
 </html>
