--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,10 @@
     <title>Domain Logger</title>
   </head>
   <body style="background-color: ADD8E6">
-    <h1>Your domains and number of tabs for each. Choose the domain of the tabs you wish to delete!</h1>
+    <h1>
+      Your domains and number of tabs for each. Choose the domain of the tabs
+      you wish to delete!
+    </h1>
     <script type="text/javascript" src="./src/index.js"></script>
   </body>
 </html>
