HW8: Enhanced UI screen and increased code coverage to 98 percent

--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,11 @@
     <title>Domain Logger</title>
   </head>
   <body style="background-color: ADD8E6">
-    <h1>
-      Your domains and number of tabs for each. Choose the domain of the tabs
-      you wish to delete!
-    </h1>
+    <br> </br>
+    <h1> <center> <u> Welcome to Domain Logger! </u> </center> </h1>
+    <h3> <center>  Here are the domains and number of tabs for each in your current chrome window. 
+      <br>Choose the domain of the tabs you wish to delete by clicking on the corresponding link in "Delete Tabs" section. </br> </center>
+    </h3>
     <script type="text/javascript" src="./src/index.js"></script>
   </body>
 </html>
